tweaks on mobile https://github.com/FAC-GM/app/issues/433#issuecomment-225153055

--- a/assets/css/client/main.css
+++ b/assets/css/client/main.css
@@ -49,7 +49,6 @@ body {
   max-width: 24em;
 }
 
-.client-login-container > form label,
 .client-login-container > form input,
 .client-login-container >form button {
   width: 100%;
@@ -58,11 +57,6 @@ body {
 
 .client-login-container > form input {
   padding: 10px 0 10px 10px;
-}
-
-.client-login-container > form label {
-  font-size: 16px;
-  margin: 0 0 5px 0;
 }
 
 .client-login-container > form input:focus,
@@ -356,11 +350,12 @@ footer {
   .client-login-container {
     width: 90%;
     height: 90%;
+    margin-top: -20px;
   }
 
   .logo img {
     width: 7em;
-    margin-top: 40px;
+    margin: 30px 0 40px 0;
   }
 
   /*client navigation on the mobile devices*/
